had to stop transitions from happening when collapsible is initializing because if startCollapsed it would show then animate closed.

--- a/src/main/resources/META-INF/resources/ibx/resources/css/collapsible.ibx.css
+++ b/src/main/resources/META-INF/resources/ibx/resources/css/collapsible.ibx.css
@@ -16,3 +16,8 @@
 {
     transition: margin .3s;
 }
+
+.ibx-collapsible.ibx-collapsible-initializing
+{
+	transition:all 0s;
+}
